# FoodRecognition

./: .gitignore  Model.py  PrepareData.py  README.md  main.py  pyproject.toml
